# sbl-hardware

./: .gitattributes  .gitignore  LICENSE  README.md
boards/daisy-seed/: hardware.json
boards/raspberry-pi-pico/: hardware.json
boards/sbl-simulator-0/: hardware.json
mainboards/daisy-seed/: hardware.json
mainboards/raspberry-pi-pico/: README.md  hardware.json
mainboards/raspberry-pi-pico-2/: hardware.json
mcu/arm/rp2040/: CMakeLists.txt  README.md  mcu.json
mcu/arm/rp2040/driver/: CMakeLists.txt  gpio.hpp  init.hpp  sbl-driver.json  timer.hpp  uart.hpp
mcu/arm/rp2040/driver/sbl/driver/: gpio.hpp  init.hpp  timer.hpp  uart.hpp
mcu/arm/rp2350/: CMakeLists.txt  mcu.json  sbl-driver.json
mcu/arm/rp2350/driver/: CMakeLists.txt  gpio.hpp  init.hpp  timer.hpp  uart.hpp  usb.hpp
mcu/arm/rp2350/driver/sbl/driver/: gpio.hpp  init.hpp  timer.hpp  uart.hpp
mcu/arm/stm32h750/: CMakeLists.txt  README.md  cecrops.json  mcu.json  sbl-driver.json  stm32h750.ld  svd-patches.yaml
mcu/arm/stm32h750/driver/: CMakeLists.txt  adc.hpp  gpio.hpp  init.hpp  startup.cpp  timer.hpp  uart.hpp
mcu/arm/stm32h750/driver/sbl/driver/: gpio.hpp  init.hpp  timer.hpp  uart.hpp
mcu/arm/stm32h750/driver/sbl/hw/reg/: cortex_m.hpp  gpio.hpp  usart.hpp
mcu/arm/stm32h750/reg/: adc.hpp  dma.hpp  flash.hpp  gpio.hpp  pwr.hpp  rcc.hpp  sai.hpp  usart.hpp
mcu/native/: README.md  mcu.json
mcu/native/driver/: sbl-driver.json
mcu/rp2040/: mcu.json
modules/boards/daisy-pod/: hardware.json
schema/: hardware.schema.json  mcu.schema.json  sbl-lock.schema.json  sbl.schema.json
